- Update the help pages by including all the commands in the action and repository menu in the index.

--- a/MacHgHelp/pgs/ActionMenu.html
+++ b/MacHgHelp/pgs/ActionMenu.html
@@ -56,6 +56,7 @@
       <div class=" two-col-description-header-right"> Operation </div>
    </div>
 
+   <a name="ActionMenu_CommitSelectedFiles"></a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Commit Selected Files...</p>
@@ -68,6 +69,7 @@
       </div>
    </div>
 
+   <a name="ActionMenu_DiffSelectedFiles"></a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Diff Selected Files</p>
@@ -79,7 +81,8 @@
          <p><strong>External Help:</strong> <a href="http://mercurial.selenic.com/wiki/Diff">diff wiki</a>, <a href="http://hgbook.red-bean.com/read/a-tour-of-mercurial-the-basics.html#id346595">MDG: Making and reviewing changes</a></p>
       </div>
    </div>
-   
+
+   <a name="ActionMenu_AddRemoveSelectedFiles"></a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>AddRemove Selected Files</p>
@@ -105,6 +108,7 @@
       <div class=" two-col-description-header-right"> Operation </div>
    </div>
 
+   <a name="ActionMenu_RevertSelectedFiles"></a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Revert Selected Files</p>
@@ -117,6 +121,7 @@
       </div>
    </div>
 
+   <a name="ActionMenu_RevertSelectedFilesToVersion"></a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Revert Selected Files to Version...</p>
@@ -129,6 +134,7 @@
       </div>
    </div>
 
+   <a name="ActionMenu_DeleteSelectedFiles"></a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Delete Selected Files</p>
@@ -140,6 +146,7 @@
       </div>
    </div>
 
+   <a name="ActionMenu_AddSelectedFiles"></a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Add Selected Files</p>
@@ -153,6 +160,7 @@
    </div>
 
 
+   <a name="ActionMenu_UntrackSelectedFiles"></a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Untrack Selected Files</p>
@@ -164,6 +172,7 @@
       </div>
    </div>
 
+   <a name="ActionMenu_RenameSelectedFiles"></a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Rename Selected File...</p>
@@ -188,6 +197,7 @@
       <div class=" two-col-description-header-right"> Operation </div>
    </div>
 
+   <a name="ActionMenu_RemergeSelectedFiles"></a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Remerge Selected Files</p>
@@ -200,6 +210,7 @@
       </div>
    </div>
 
+   <a name="ActionMenu_MarkResolvedSelectedFiles"></a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Mark Resolved Selected Files</p>
@@ -224,6 +235,7 @@
       <div class=" two-col-description-header-right"> Operation </div>
    </div>
 
+   <a name="ActionMenu_CommitAllFiles"></a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Commit All Files...</p>
@@ -236,6 +248,7 @@
       </div>
    </div>
 
+   <a name="ActionMenu_DiffAllFiles"></a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Diff All Files</p>
@@ -248,6 +261,7 @@
       </div>
    </div>
 
+   <a name="ActionMenu_RevertAllFiles"></a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Revert All Files</p>
@@ -260,6 +274,7 @@
       </div>
    </div>
 
+   <a name="ActionMenu_RevertAllFilesToVersion"></a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Revert All Files to Version...</p>
@@ -284,6 +299,7 @@
       <div class=" two-col-description-header-right"> Operation </div>
    </div>
 
+   <a name="ActionMenu_IgnoreSelectedFiles"></a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Ignore Selected Files</p>
@@ -296,6 +312,7 @@
       </div>
    </div>
 
+   <a name="ActionMenu_UnIgnoreSelectedFiles"></a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>UnIgnore Selected Files</p>
@@ -308,6 +325,7 @@
       </div>
    </div>
 
+   <a name="ActionMenu_AnnotateSelectedFiles"></a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Annotate Selected Files</p>
@@ -319,6 +337,7 @@
       </div>
    </div>
 
+   <a name="ActionMenu_Rollback"></a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Rollback Last Commit</p>
