--- a/MacHgHelp/pgs/xall.html
+++ b/MacHgHelp/pgs/xall.html
@@ -42,13 +42,13 @@ window.scrollBy(0,-60);
 <span class="alphaletters">F</span>
 <span class="alphaletters">G</span>
 <span class="alphaletters"><a href="javascript:go('#H');">H</a></span>
-<span class="alphaletters">I</span>
+<span class="alphaletters"><a href="javascript:go('#I');">I</a></span>
 <span class="alphaletters">J</span>
 <span class="alphaletters">K</span>
 <span class="alphaletters">L</span>
 <span class="alphaletters"><a href="javascript:go('#M');">M</a></span>
 <span class="alphaletters">N</span>
-<span class="alphaletters">O</span>
+<span class="alphaletters"><a href="javascript:go('#O');">O</a></span>
 <span class="alphaletters"><a href="javascript:go('#P');">P</a></span>
 <span class="alphaletters">Q</span>
 <span class="alphaletters"><a href="javascript:go('#R');">R</a></span>
@@ -73,26 +73,55 @@ window.scrollBy(0,-60);
 <a href="help:anchor=ActionMenu bookID=MacHg Help">Action Menu</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=RepositoryMenu_label bookID=MacHg Help">Add Revision Label (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=RepositoryMenu_addlocalrepository bookID=MacHg Help">Add Local Repository (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=RepositoryMenu_addrepositorygroup bookID=MacHg Help">Add New Repository Group (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=ActionMenu_AddRemoveSelectedFiles bookID=MacHg Help">AddRemove Selected Files (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=ActionMenu_AddSelectedFiles bookID=MacHg Help">Add Selected Files (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=RepositoryMenu_addserverrepository bookID=MacHg Help">Add Server Repository (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 <div class="indexitem"><div class="indexentrytext"> 
 <a href="help:anchor=AddingExistingLocalRepository bookID=MacHg Help">Adding Existing Local Repositories</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
-
 <div class="indexitem"><div class="indexentrytext"> 
 <a href="help:anchor=AddingRepositoryGroup bookID=MacHg Help">Adding Repository Groups</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
-
 
 <div class="indexitem"><div class="indexentrytext"> 
 <a href="help:anchor=AddingServerRepository bookID=MacHg Help">Adding Server Repositories</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=ActionMenu_AnnotateSelectedFiles bookID=MacHg Help">Annotate Selected Files (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 
 
 
 <div class ="letterhead"><a name="B"></a>B</div>
+
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=RepositoryMenu_backout bookID=MacHg Help">Backout Changeset (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 <div class="indexitem"><div class="indexentrytext"> 
 <a href="help:anchor=AboutTheBrowserView bookID=MacHg Help">Browser View</a>
@@ -101,13 +130,32 @@ window.scrollBy(0,-60);
 
 
 
-
 <div class ="letterhead"><a name="C"></a>C</div>
+
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=RepositoryMenu_clone bookID=MacHg Help">Clone (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 <div class="indexitem"><div class="indexentrytext"> 
 <a href="help:anchor=CloningARepository bookID=MacHg Help">Cloning a Repository</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=RepositoryMenu_collapse bookID=MacHg Help">Collapse Changesets (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=ActionMenu_CommitAllFiles bookID=MacHg Help">Commit All Files (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=ActionMenu_CommitSelectedFiles bookID=MacHg Help">Commit Selected Files (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=RepositoryMenu_configurerepository bookID=MacHg Help">Configure Selected Repository (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 <div class="indexitem"><div class="indexentrytext"> 
 <a href="help:anchor=CreatingANewLocalRepository bookID=MacHg Help">Creating a new Local Repository</a>
@@ -116,13 +164,23 @@ window.scrollBy(0,-60);
 
 
 
-
 <div class ="letterhead"><a name="D"></a>D</div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=ActionMenu_DeleteSelectedFiles bookID=MacHg Help">Delete Selected Files (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 <div class="indexitem"><div class="indexentrytext"> 
 <a href="help:anchor=AboutTheDifferencesView bookID=MacHg Help">Differences View</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=ActionMenu_DiffAllFiles bookID=MacHg Help">Diff All Files (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=ActionMenu_DiffSelectedFiles bookID=MacHg Help">Diff Selected Files (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 
 
@@ -135,6 +193,10 @@ window.scrollBy(0,-60);
 
 <div class="indexitem"><div class="indexentrytext"> 
 <a href="help:anchor=AboutEmptyRepositories bookID=MacHg Help">Empty Repositories</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=RepositoryMenu_histedit bookID=MacHg Help">Edit Changesets (menu item)</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 
@@ -150,6 +212,18 @@ window.scrollBy(0,-60);
 
 
 
+<div class ="letterhead"><a name="I"></a>I</div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=ActionMenu_IgnoreSelectedFiles bookID=MacHg Help">Ignore Selected Files (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=RepositoryMenu_incoming bookID=MacHg Help">Incoming (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+
+
 
 <div class ="letterhead"><a name="M"></a>M</div>
 
@@ -162,6 +236,18 @@ window.scrollBy(0,-60);
 <a href="help:anchor=AboutMacHgDocuments bookID=MacHg Help">MacHgDocuments</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=RepositoryMenu_manifest bookID=MacHg Help">Manifest (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=ActionMenu_MarkResolvedSelectedFiles bookID=MacHg Help">Mark Resolved Selected Files (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=RepositoryMenu_merge bookID=MacHg Help">Merge (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
 
 <div class="indexitem"><div class="indexentrytext"> 
 <a href="help:anchor=MergingBranches bookID=MacHg Help">Merging Branches</a>
@@ -170,11 +256,29 @@ window.scrollBy(0,-60);
 
 
 
+<div class ="letterhead"><a name="O"></a>O</div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=RepositoryMenu_outgoing bookID=MacHg Help">Outgoing (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+
+
 
 <div class ="letterhead"><a name="P"></a>P</div>
 
 <div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=RepositoryMenu_pull bookID=MacHg Help">Pull (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+
+<div class="indexitem"><div class="indexentrytext"> 
 <a href="help:anchor=PullingChanges bookID=MacHg Help">Pulling Changes</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=RepositoryMenu_push bookID=MacHg Help">Push (menu item)</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 
@@ -199,25 +303,56 @@ window.scrollBy(0,-60);
 <div class ="letterhead"><a name="R"></a>R</div>
 
 <div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=RepositoryMenu_rebase bookID=MacHg Help">Rebase Changesets (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=ActionMenu_RemergeSelectedFiles bookID=MacHg Help">Remerge Selected Files (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
 <a href="help:anchor=RemovingRepositoryItem bookID=MacHg Help">Removing Repository Items</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=RepositoryMenu_removerepositoryitem bookID=MacHg Help">Removing Repository Item (menu command)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=ActionMenu_RenameSelectedFiles bookID=MacHg Help">Rename Selected Files (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 <div class="indexitem"><div class="indexentrytext"> 
 <a href="help:anchor=AboutRepositories bookID=MacHg Help">Repositories</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
-
 <div class="indexitem"><div class="indexentrytext"> 
 <a href="help:anchor=AboutRepositoryLists bookID=MacHg Help">Repository Lists</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
-
 
 <div class="indexitem"><div class="indexentrytext"> 
 <a href="help:anchor=RepositoryMenu bookID=MacHg Help">Repository Menu</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=ActionMenu_RevertAllFiles bookID=MacHg Help">Revert All Files (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=ActionMenu_RevertAllFilesToVersion bookID=MacHg Help">Revert All Files To Version (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=ActionMenu_RevertSelectedFiles bookID=MacHg Help">Revert Selected Files (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=ActionMenu_RevertSelectedFilesToVersion bookID=MacHg Help">Revert Selected Files To Version (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=ActionMenu_Rollback bookID=MacHg Help">Rollback Last Commit (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 
 
@@ -231,6 +366,9 @@ window.scrollBy(0,-60);
 <a href="help:anchor=Shortcuts bookID=MacHg Help">Shortcuts</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=RepositoryMenu_strip bookID=MacHg Help">Strip Changesets (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 
 
@@ -238,8 +376,22 @@ window.scrollBy(0,-60);
 <div class ="letterhead"><a name="U"></a>U</div>
 
 <div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=ActionMenu_UnIgnoreSelectedFiles bookID=MacHg Help">UnIgnore Selected Files (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=ActionMenu_UntrackSelectedFiles bookID=MacHg Help">Untrack Selected Files (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=RepositoryMenu_update bookID=MacHg Help">Update (menu item)</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
 <a href="help:anchor=UsingExternalMercurialVersion bookID=MacHg Help">Using an External Mercurial Version</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+
 
 
 <div id="padbottom">&nbsp;</div>
