- Fix issue 171 unknown -> untracked

--- a/MacHgHelp/pgs/AboutTheBrowserView.html
+++ b/MacHgHelp/pgs/AboutTheBrowserView.html
@@ -74,7 +74,7 @@
       <td>Controls the showing or hiding of files which are missing.</td>
    </tr>
    <tr>
-      <td valign="top">Unknown</td>
+      <td valign="top">Untracked</td>
       <td>Controls the showing or hiding of files which are not yet tracked.</td>
    </tr>
    <tr>
